# cqesto

./: CMakeLists.txt  README.md  configure
cmake/: Helpers.cmake
contrib/: .gitignore  setup-cadical.sh  setup-cms.sh  setup-minisat.sh
description/: .gitignore  cqesto-description.tex  makefile  refs.bib
examples/: b1.qcir  s.qcir  t0.qcir  t1.qcir  t2.qcir  t3.qcir
scripts/: genNtest.sh  genqcir.py
src/: .clang-format  .gitignore  DataStructures.h  EncoderToSAT.h  Eval.cpp  Eval.h  Expressions.cpp  Expressions.h  FindCut.cpp  FindCut.h  IDVector.h  ImmutableVector.h  IpasirWrap.h  LICENSE.txt  LevelInfo.cpp  LevelInfo.h  LevelSolver.cpp  LevelSolver.h  MakePossible.cpp  MakePossible.h  Makefile  MaxQLev.cpp  MaxQLev.h  MiniSatExt.h  Reduce.h  SMSWrap.h  SetPolarities.h  Simplify.h  Table.h  Transform.h  VariableManager.h  Visitors.h  ZigZag.cpp  ZigZag.h  auxiliary.cpp  auxiliary.h  build_configs.sh  cmsat_wrap.h  data_structures.h  dbg_cmp_eval.h  (+52 more)
src/cadical/: .gitignore  setmeup.sh
src/examples/: t0.qcir  t1.qcir
test/: build_configs.sh
